# GameKit

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: DrawCall.hxx.F701AFCA1C5ADEB1.idx  Macros.hxx.08962980708A2E9D.idx  PCH.hxx.E62D1359944DEC45.idx  Renderer.cxx.A202B252BAE14BD7.idx  Renderer.cxx.C82BF5DAC40360A7.idx  Renderer.hxx.8906FDCB2471EDD4.idx  Renderer.hxx.BD4CA8E0ADCB38D7.idx  Rendering.cxx.3DF2DDD9BC5E444D.idx  Rendering.cxx.42405A89EB139365.idx  Rendering.hxx.708D64C21759C3D4.idx  Rendering.hxx.BA85B9AA08ED861C.idx  Vector.hxx.5CE7CB5A4AE4C64B.idx  Vector3.hxx.40195B3462362278.idx  Vector4.hxx.F2E656FFD2C75794.idx
GameKit/: CMakeLists.txt
GameKit/Core/include/Common/: PCH.hxx
GameKit/Core/include/Containers/: Vector.hxx
GameKit/Engine/: CMakeLists.txt  GameKit.swift
GameKit/Rendering/: CMakeLists.txt
GameKit/Rendering/include/: CommandList.hxx  Device.hxx  DrawCall.hxx  DrawSpace.hxx  RenderBackend.hxx  RenderLayer.hxx  Renderer.hxx
GameKit/Rendering/include/d3d12/: D3D12Device.hxx
GameKit/Rendering/src/: Renderer.cxx
